# OxLinter

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
Astyle/: ASBeautifier.cpp  ASEnhancer.cpp  ASFormatter.cpp  ASResource.cpp  astyle.h
PatchForWave/: cpp_iterator.hpp  cpp_re2c_lexer.hpp  token_ids.hpp
PatchForWave/re2clex/: cpp.re  cpp_re.inc  strict_cpp.re
include/: constantlinter.h  detectors.h  oxlinter.h  oxlintertool.h  oxmain.h  symbol.h
src/: detectors.cpp  enumdetector.cpp  main.cpp  oxlinter.cpp  oxlintertool.cpp  oxmain.cpp  stdafx.cpp  symbol.cpp  symbolfunctionmemberdetector.cpp  unusedlocaldectector.cpp
waveidl/: cpp.cpp  cpp.hpp  custom_directives.hpp
